make sure headers and image doesnt break the layout

--- a/assets/index.scss
+++ b/assets/index.scss
@@ -56,6 +56,12 @@ $margin-big: 20px;
         height: 80px;
         padding-top: 30px;
       }
+
+      @media (max-width: 320px) {
+        font-size: 26px;
+        height: 70px;
+        padding-top: 40px;
+      }
     }
   }
 }
@@ -128,10 +134,13 @@ $margin-big: 20px;
 
     img {
       $border: 10px;
+
       border: $border solid #0FD482;
       border-radius: $border;
       -moz-border-radius: $border;
       -webkit-border-radius: $border;
+
+      max-width: 80%;
     }
   }
 }
